--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: shadow1234090/my-cicd-project:58
+        image: shadow1234090/my-cicd-project:latest
         ports:
         - containerPort: 80
